# augmentinel

./: .gitignore  CLAUDE.md  CMakeLists-mingw.txt  CMakeLists.txt  PORTING_ANALYSIS.md  PORTING_PLAN.md  PORTING_TODO.md  ReadMe.md  build-mingw.bat  build.bat  build.sh  setup-mingw.bat  upgrade-mingw.bat
shaders/: Effect.frag  Effect.vert  Sentinel.frag  Sentinel.vert  SharedConstants.h
src/: Animate.cpp  Application.cpp  Application.h  Audio.cpp  Audio.h  Augmentinel.cpp  Augmentinel.h  Camera.cpp  DebugOverlay.cpp  DebugOverlay.h  Game.h  Model.cpp  Model.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Platform.h  Settings.cpp  Settings.h  Spectrum.cpp  Utils.cpp  Utils.h  Vertex.h  View.cpp  View.h  main.cpp
